--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,17 @@
   <title><%= title %></title>
 
   <!-- CSS Section -->
+
+  <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
+  <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css' />
   <link rel='stylesheet' href='/Content/app.css' />
 </head>
 <body>
     <h1>Welcome to the <%= title %> page</h1>
     
      <!-- Script Section -->
+    <script src="/jquery/dist/jquery.min.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/Scripts/app.js"></script>
 </body>
 </html>
