--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= title %></title>
+<%- include  partials/header.ejs %>
 
-  <!-- CSS Section -->
+<%- include  partials/main_nav.ejs %>
 
-  <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
-  <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css' />
-  <link rel='stylesheet' href='/Content/app.css' />
-</head>
-<body>
-    <h1>Welcome to the <%= title %> page</h1>
+  <!-- Main Content -->
+  <main class="container">
+    <div class="jumbotron">
+      <h1 class="display-4">Welcome to the <%= title %> page</h1>
+    </div>
+  </main>
+
+<%- include  partials/bottom_nav.ejs %>
+
+<%- include  partials/footer.ejs %>
+
     
-     <!-- Script Section -->
-    <script src="/jquery/dist/jquery.min.js"></script>
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/Scripts/app.js"></script>
-</body>
-</html>
+
 
