--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,1 +1,101 @@
 /* custom css goes here */
+
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-flow: column;
+  font-family: inherit;
+}
+
+.navbar{
+    z-index: 9;
+}
+
+.navbar-dark .navbar-nav .nav-link.active{
+    color: #d6af5b;
+}
+
+
+.navbar-dark .navbar-nav .nav-link:hover{
+    color: #d6af5b !important;
+}
+main {
+  flex: 1 1 auto;
+  margin-bottom: 65px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.root-container{
+    background: url(../Assets/images/bg-home.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-height: 100%;
+    position: absolute;
+    top: 234px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.root-container .col-md-8{
+    margin-top: 2%;
+}
+
+.title {
+    color: #caa14f !important;
+  }
+
+  div.slide-down h1,h3,form,.row img{
+    animation: 2s slide-down;
+    margin-top:0%;
+  }
+  
+  @keyframes slide-down {
+    from {
+      margin-top: -100%;
+    }
+  
+    to {
+      margin-top: 0%;
+    }
+  }
+
+  .service-img{
+      width: 100%;
+  }
+
+  .services .col-md-3{
+      height: 300px;
+      width: 300px;
+      border: 1px solid;
+      margin: 15px;
+  }
+  
+  .services .col-md-3 h1{
+      width: 100%;
+      background: #caa14f;
+      color: white !important;
+      padding: 10px;
+  }
+
+@media (min-width: 768px) { 
+    form{
+        width: 40% !important;
+        margin: auto;
+        background: #d6af5b;
+        padding: 15px;
+    }
+    .form-label{
+        color: white;
+    }
+ }
+  
