--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,8 @@
 <%- include  partials/main_nav.ejs %>
 
   <!-- Main Content -->
-  <main class="container">
-    <div class="jumbotron">
-      <h1 class="display-4">Welcome to the <%= title %> page</h1>
-    </div>
+  <main>
+    <%- include(page + '.ejs') %>
   </main>
 
 <%- include  partials/bottom_nav.ejs %>
