--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,5 +1,10 @@
-/* custom css goes here */
+/** File name: app.css
+Name: Manvir Kaur
+Student Id: 301171525
+Date: 20/10/2021
+*/
 
+/* custom css goes here */
 
 html,
 body {
