--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <div class="row mt-3 slide-down">
-    <h1 class="title  text-center fst-italic">Let get in touch</h1>
+    <h1 class="title  text-center fst-italic">Lets get in touch</h1>
     <h3 class=" text-center fst-italic">You can contact me by emailing at <a href="mailto:mkaur791@my.centennialcollege.ca">mkaur791@my.centennialcollege.ca</a></h3>
-    <form action="/home">
+    <form method='POST'>
         <div class="mb-3">
             <label for="firstname" class="form-label">First Name</label>
             <input type="text" class="form-control" id="firstname" required="required">
